# reben-training-scripts

./: .gitignore  LICENSE  README.md  pyproject.toml
ben_publication/: BENv2ImageClassifier.py  BigEarthNetv2_0_ImageClassifier.py  mock_dm.py
dataset_survey/: survey_idx.py  survey_index_by_split.py
models/: README.md  __init__.py  backbone_config.py  base.py  fusion.py  heads.py  multimodal.py  unimodal.py
multimodal/: README.md  __init__.py  example_usage.py  lightning_module.py  model.py
reben_publication/: BigEarthNetv2_0_ImageClassifier.py  DINOv3Backbone.py  DINOv3_Pretraining.py  MultiBackboneClassifier.py  __init__.py  losses.py
scripts/: .gitignore  README_multimodal.md  README_template.md  analyze_bigearthnet.py  diagnose_training.py  improve_hf_training.py  inference_example.py  load_BENv2_pretrained_from_hf.py  load_BigEarthNetv2_0_pretrained_from_hf.py  prepare_bigearthnet_classifier_ckpt.py  test_BigEarthNetv2_0.py  test_checkpoint_BigEarthNetv2_0.py  test_multimodal.py  train_BENv2.py  train_BigEarthNetv2_0.py  train_all_no_rgb.sh  train_dinov3_pretraining.py  train_multimodal.py  train_multimodal.sh  train_multimodal_commands.md  train_multimodal_example.py  train_multimodal_example.sh  train_multimodal_from_scratch.py  train_multimodal_from_scratch.sh  train_multimodal_from_scratch_pretrained.sh  train_resnet.sh  train_s2.sh  train_s2_no_rgb.sh  utils.py  verify_band_order.py  verify_data_stacking.py
train_scripts/: MULTI_CONFIG_USAGE.md  README.md  SETUP_DINOV3.md  config.yaml  config_dinov3_base_lp.yaml  config_dinov3_giant_lp.yaml  submit.py  (+10 more)
(+22 files in other folders)
