[tool.poetry]
name = "ben-publication"
version = "0.1.0"
description = ""
authors = ["leonard <l.hackel@tu-berlin.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
configilm = { extras = ["full"], version = "^0.6.3" }
wandb = "^0.17.1"
numpy = "^1.26.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
