[tool.poetry]
name = "reben-publication"
version = "0.2.0"
description = ""
authors = ["leonard <l.hackel@tu-berlin.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
configilm = { extras = ["full"], version = "^0.7.0" }
wandb = "^0.17.1"
numpy = "^1.26.4"

## uncomment for cuda 11
# torch = "2.2.2"
# torch = { version = "2.2.2+cu118", source = "pytorch-gpu-src" }
# torchvision = { version = "0.17.2+cu118", source = "pytorch-gpu-src" }
# lightning = "2.2.1"

# [[tool.poetry.source]]
# name = "pytorch-gpu-src"
# url = "https://download.pytorch.org/whl/cu118"
# priority = "explicit"
blosc2 = "^2.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
